--- a/index.html
+++ b/index.html
@@ -15,14 +15,38 @@
         <p> <em> Stream of <a href="http://www.nitjsr.ac.in/academics/departments/facultylist.php?deptid=CIVIL"> Civil Engineering </a></em> </p> </td>
       </tr>
     </table>
-        <p> I have selected in EXL Services as Business Analyst.</p>
-    <hr size="3" noshade>
-    <h3> Education</h3>
-    <ul>
-      <li> BTECH  CGPA      : 8.23</li>
-      <li> INTER Percentage : 95%</li>
-      <li> 10TH CGPA        : 8.7</li>
-      </ul>
+      <hr>
+      <h3> Education </h3>
+      <table border="1">
+        <thead>
+          <tr>
+            <th> Year</th>
+            <th> Course</th>
+            <th> Institute</th>
+            <th>Percentage or CGPA </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td> 2016 </td>
+            <td> SSC</td>
+            <td> Dr.KKR </td>
+            <td>8.7</td>
+          </tr>
+          <tr>
+            <td>2016-2018</td>
+            <td> Inter</td>
+            <td> Sri Chaithayna</td>
+            <td>95%</td>
+          </tr>
+          <tr>
+            <td>2018-2022</td>
+            <td> BTECH</td>
+            <td> NITJSR</td>
+            <td>8.23</td>
+          </tr>
+        </tbody>
+        </table>
       <hr>
     <h3> Hobbies</h3>
     <ol type="i">
@@ -32,33 +56,6 @@
       <li> Tech blogs</li>
     </ol>
     <hr>
-    <h3> Education in breif</h3>
-    <table border="1">
-      <thead>
-        <tr>
-          <th> Year</th>
-          <th> Course</th>
-          <th> Institute</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> 2016 </td>
-          <td> SSC</td>
-          <td> Dr.KKR </td>
-        </tr>
-        <tr>
-          <td>2016-2018</td>
-          <td> Inter</td>
-          <td> Sri Chaithayna</td>
-        </tr>
-        <tr>
-          <td>2018-2022</td>
-          <td> BTECH</td>
-          <td> NITJSR</td>
-        </tr>
-      </tbody>
-      </table>
       <hr>
       <h3> Skills</h3>
       <table cellspacing="10">
