--- a/index.html
+++ b/index.html
@@ -1,102 +1,103 @@
-  <!DOCTYPE html>
-  <html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title> Jeshu Personal site</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title> Jeshu Personal site</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <body>
-    <table cellspacing="20">
+<body >
+  <table cellspacing="20">
+    <tr>
+      <td>     <img src="Jeshu.png" alt="Jeshwanth Profile pic" width="200"  height="200"> </td>
+      <td> <h1> Jeshwanth Mekala </h1>
+      <p><em> Final year student in <strong><a href="http://www.nitjsr.ac.in/">National Institute of Technology , Jamshedpur</a></strong> </em> </p>
+      <p> <em> Stream of <a href="http://www.nitjsr.ac.in/academics/departments/facultylist.php?deptid=CIVIL"> Civil Engineering </a></em> </p> </td>
+    </tr>
+  </table>
+    <hr>
+    <h3> Education </h3>
+    <table  cellspacing="10">
+      <thead>
+        <tr>
+          <th> Year</th>
+          <th> Course</th>
+          <th> Institute</th>
+          <th>Percentage or CGPA </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> 2016 </td>
+          <td> SSC</td>
+          <td> Dr.KKR </td>
+          <td>8.7</td>
+        </tr>
+        <tr>
+          <td>2016-2018</td>
+          <td> Inter</td>
+          <td> Sri Chaithayna</td>
+          <td>95%</td>
+        </tr>
+        <tr>
+          <td>2018-2022</td>
+          <td> BTECH</td>
+          <td> NITJSR</td>
+          <td>8.23</td>
+        </tr>
+      </tbody>
+      </table>
+    <hr>
+  <h3> Hobbies</h3>
+  <ol type="i">
+    <li> Badminton</li>
+    <li> Cricket</li>
+    <li> Music</li>
+    <li> Tech blogs</li>
+  </ol>
+
+    <hr>
+    <h3> Skills</h3>
+    <table cellspacing="10">
       <tr>
-        <td>     <img src="Jeshu.png" alt="Jeshwanth Profile pic" width="200"  height="200"> </td>
-        <td> <h1> Jeshwanth Mekala </h1>
-        <p><em> Final year student in <strong><a href="http://www.nitjsr.ac.in/">National Institute of Technology , Jamshedpur</a></strong> </em> </p>
-        <p> <em> Stream of <a href="http://www.nitjsr.ac.in/academics/departments/facultylist.php?deptid=CIVIL"> Civil Engineering </a></em> </p> </td>
+        <td>
+          <table>
+             <tr>
+               <td> MYSQL</td>
+               <td>⭐⭐⭐⭐⭐</td>
+             </tr>
+             <tr>
+               <td> EXCEL</td>
+               <td>⭐⭐⭐⭐</td>
+             </tr>
+             <tr>
+               <td> TABLEAU</td>
+               <td>⭐⭐⭐⭐</td>
+             </tr>
+          </table>
+        </td>
+        <td>
+          <table>
+             <tr>
+               <td> PYTHON</td>
+               <td>⭐⭐⭐</td>
+             </tr>
+             <tr>
+               <td> C LAN</td>
+               <td>⭐⭐⭐</td>
+             </tr>
+             <tr>
+               <td> ML</td>
+               <td>⭐⭐</td>
+             </tr>
+          </table>
+
+        </td>
       </tr>
     </table>
-      <hr>
-      <h3> Education </h3>
-      <table border="1">
-        <thead>
-          <tr>
-            <th> Year</th>
-            <th> Course</th>
-            <th> Institute</th>
-            <th>Percentage or CGPA </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td> 2016 </td>
-            <td> SSC</td>
-            <td> Dr.KKR </td>
-            <td>8.7</td>
-          </tr>
-          <tr>
-            <td>2016-2018</td>
-            <td> Inter</td>
-            <td> Sri Chaithayna</td>
-            <td>95%</td>
-          </tr>
-          <tr>
-            <td>2018-2022</td>
-            <td> BTECH</td>
-            <td> NITJSR</td>
-            <td>8.23</td>
-          </tr>
-        </tbody>
-        </table>
-      <hr>
-    <h3> Hobbies</h3>
-    <ol type="i">
-      <li> Badminton</li>
-      <li> Cricket</li>
-      <li> Music</li>
-      <li> Tech blogs</li>
-    </ol>
     <hr>
-      <hr>
-      <h3> Skills</h3>
-      <table cellspacing="10">
-        <tr>
-          <td>
-            <table>
-               <tr>
-                 <td> MYSQL</td>
-                 <td>⭐⭐⭐⭐⭐</td>
-               </tr>
-               <tr>
-                 <td> EXCEL</td>
-                 <td>⭐⭐⭐⭐</td>
-               </tr>
-               <tr>
-                 <td> TABLEAU</td>
-                 <td>⭐⭐⭐⭐</td>
-               </tr>
-            </table>
-          </td>
-          <td>
-            <table>
-               <tr>
-                 <td> PYTHON</td>
-                 <td>⭐⭐⭐</td>
-               </tr>
-               <tr>
-                 <td> C LAN</td>
-                 <td>⭐⭐⭐</td>
-               </tr>
-               <tr>
-                 <td> ML</td>
-                 <td>⭐⭐</td>
-               </tr>
-            </table>
+    <a href="Contact.html">My Contact</a>
+</body>
 
-          </td>
-        </tr>
-      </table>
-      <hr>
-      <a href="Contact.html">My Contact</a>
-  </body>
-
-  </html>
+</html>
